chore: No longer a Filiosoft project

--- a/views/email.hbs
+++ b/views/email.hbs
@@ -146,7 +146,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                             <tr>
                                 <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">Filiosoft, LLC, 8506 E 450 S, Carthage IN 46115</span>
+                                    <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">maxup, 8506 E 450 S, Carthage IN 46115</span>
                                     <br> Don't like these emails?
                                     <a href="[unsubscribe]" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Unsubscribe</a>.
                                 </td>
@@ -154,7 +154,7 @@
                             <tr>
                                 <td class="content-block powered-by" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
                                     Powered by
-                                    <a href="https://filiosoft.com" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">Filiosoft</a>.
+                                    <a href="https://github.com/maxup-sh/maxup" style="color: #999999; font-size: 12px; text-align: center; text-decoration: none;">maxup</a>.
                                 </td>
                             </tr>
                         </table>
